# grokking-sc

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README_Zenodo.md  README_artifact.md  build-webdemo.sh  build_diskball.sh  cabal.project  clean_repo.sh  comments.md  create_disk_tar.sh  create_source_tar.sh  examples.js  fourmolu.yaml  index.html  pack.sh  sequent-calculus.cabal  test_examples.sh
.github/workflows/: ci.yml  fourmolu.yml  website.yml
app/: Main.hs
disk_image/: Debugging.md  README.md  create_disk_tar.sh  start.bat  start.sh
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.0.20240413/: package.cache  sequent-calculus-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-9.6.2/: package.cache  sequent-calculus-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-9.6.3/: package.cache  sequent-calculus-0.1.0.0-inplace.conf
examples/: ArithmeticExpressions.sc  FastMultiplication.sc  Lambdas.sc  LazyPair.sc  Lists.sc  Stream.sc  Tuples.sc  example.dual  examples_to_js.sh  paper_examples.sc
src/: Compiler.hs
src/Core/: Eval.hs  Focusing.hs  Pretty.hs  Simplify.hs  Substitution.hs  Syntax.hs
src/Duality/: Parser.hs  Syntax.hs  Types.hs
src/Fun/: Parser.hs  Syntax.hs  Types.hs
test/: Main.hs  Parser.hs  Substitution.hs
web-app/: JSBits.hs  Main.hs  examples.js  index.html
web-app/examples/: FastMultiplication.sc  LazyPair.sc  Lists.sc  examples_to_js.sh
