cabal-version:      3.0
name:               sequent-calculus
version:            0.1.0.0
synopsis:           Compiling to the sequent calculus
description:        An implementation of the paper "Grokking the Sequent Calculus (Functional Pearl)"
                    which was published at ICFP 2024.
license:            BSD-3-Clause
license-file:       LICENSE
author:             David Binder, Marius Müller, Marco Tzschentke
maintainer:         David Binder, Marius Müller, Marco Tzschentke
copyright:          (c) 2024 David Binder, Marius Müller, Marco Tzschentke
category:           Development
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall -Wno-orphans

library
    import:           warnings
    exposed-modules:  Fun.Syntax
                      Fun.Types
                      Fun.Parser
                      Core.Syntax
                      Core.Eval
                      Core.Focusing
                      Core.Pretty
                      Core.Substitution
                      Core.Simplify
                      Compiler
    build-depends:    base >= 4.17.0 && < 4.20,
                      containers >= 0.6 && < 0.8,
                      megaparsec >= 9.6 && < 9.7,
                      text >= 2.0 && < 2.2,
                      mtl >= 2.3 && < 2.4,
                      prettyprinter >= 1.7 && < 1.8
    hs-source-dirs:   src
    default-language: GHC2021

executable sequent-calculus
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        text,
        sequent-calculus

    hs-source-dirs:   app
    default-language: GHC2021

executable web-demo
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        text,
        sequent-calculus
    hs-source-dirs:   web-app
    other-modules:    JSBits
    default-language: GHC2021

test-suite unit-tests
    import:           warnings
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    other-modules:    Parser
                      Substitution
    build-depends:
        prettyprinter,
        base,
        sequent-calculus,
        tasty,
        tasty-hunit,
        text
    hs-source-dirs:   test
    default-language: GHC2021
